--- a/src/styles/comment.less
+++ b/src/styles/comment.less
@@ -2,9 +2,9 @@
 .comment-list{
     @import './comment-item.less';
 }
-.comment-show-more{
-
-}
-.comment-no-more{
-
+.comment-info{
+    margin-top: 10px;
+    text-align: center;
+    color:#888;
+    cursor: pointer;
 }
