修改一个小样式

--- a/src/styles/text-area.less
+++ b/src/styles/text-area.less
@@ -2,6 +2,7 @@
 
     .comment-f-w{
         padding: 5px 0;
+        text-align: left;
         .comment-f-b{
             font-size: 16px;
             margin-right: 5px;
