--- a/src/styles/emoji.less
+++ b/src/styles/emoji.less
@@ -56,5 +56,6 @@ span.emoji-sizer{
 .comment-emoji-w{
     border: 1px dashed #ccc;
     padding: 5px;
-    border-radius: 3px;
+	border-radius: 3px;
+	margin-top: 5px;
 }
