--- a/src/styles/editor.less
+++ b/src/styles/editor.less
@@ -7,6 +7,7 @@
     border: none;
     outline: none;
     padding: 5px;
+    line-height: 22px;
     &:focus{
         background-color: #f9f9f9;
     }
