--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -8,6 +8,9 @@
     padding: 10px;
     @import './submit.less';
     @import './comment.less';
+    .hljs {
+        background: #1E1E1E!important;
+    }
 }
 @import './editor.less';
 @import './text-area.less';
