--- a/src/styles/comment-item.less
+++ b/src/styles/comment-item.less
@@ -18,7 +18,7 @@
     }
     .comment-item-name{
         color: #666;
-        font-size: 18px;
+        font-size: 16px;
         margin-left: 10px;
     }
     .comment-item-date{
@@ -64,4 +64,27 @@
             cursor: pointer;
         }
     }
+}
+
+.reply-list.comment-w{
+    .comment-item{
+        margin: 5px 0;
+        padding: 5px 0;
+        border: none;
+        .comment-item-name{
+            font-size: 14px;
+        }
+        .comment-item-content{
+            font-size: 14px;
+        }
+        .comment-item-img{
+            width: 25px;
+            height: 25px;
+            line-height: 25px;
+        }
+    }
+}
+
+.reply-list.comment-w *{
+    font-size: 14px;
 }
