--- a/src/styles/emoji.less
+++ b/src/styles/emoji.less
@@ -22,6 +22,12 @@ span.emoji-sizer {
      
 }
 
+span.mac-emoji{
+	font-size: 20px;
+    margin: 0 2px;
+	cursor: pointer;
+}
+
 span.emoji-outer {
 	display: -moz-inline-box;
 	display: inline-block;
