--- a/src/styles/submit.less
+++ b/src/styles/submit.less
@@ -3,6 +3,7 @@
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 3px;
+    position: relative;
     .comment-s-header{
         display: flex;
         .comment-s-input{
