feat: 0.0.12 fix bug

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -3,7 +3,7 @@
     *{
         box-sizing: border-box;
         font-family: Microsoft Yahei;
-        font-size: 15px;
+        font-size: 15px!important;
     }
     padding: 10px;
     @import './submit.less';
