--- a/src/styles/editor.less
+++ b/src/styles/editor.less
@@ -8,6 +8,8 @@
     outline: none;
     padding: 5px;
     line-height: 22px;
+}
+.comment-preview, .comment-editor, .comment-item-content{
     &:focus{
         background-color: #f9f9f9;
     }
@@ -30,12 +32,7 @@
     &::-webkit-scrollbar-track {
         display: none;
     }
-    &::-webkit-scrollbar-track-piece {
-        background-color:#ddd;
-    }
     &::-webkit-scrollbar-thumb{
-        background-color:#ccc;
-        border-radius:5px;
-        cursor: pointer;
+        background-color:rgba(150,150,150,.2);
     }
 }
