--- a/src/styles/md-preview.less
+++ b/src/styles/md-preview.less
@@ -4,6 +4,8 @@
     background-color: #f4f4f4;
     min-height: 60px;
     margin-top: 5px;
+    max-height: 300px;
+    overflow: auto;
     code{
         border-radius: 3px;
     }
