fix: dark code background

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -46,4 +46,7 @@
         background-color: #111;
         border-bottom: 1px dashed #ccc;
     }
+    .comment-preview code {
+        background-color: #333!important;
+    }
 }
