--- a/src/styles/submit.less
+++ b/src/styles/submit.less
@@ -14,6 +14,7 @@
             border-bottom: 1px dashed #ddd;
             outline: none;
             padding: 5px;
+            width: 50%;
             &:focus{
                 border-bottom: 1px dashed #4a4;
                 background-color: #f9f9f9;
